<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SmartHomeActivity!</string>
    <string name="app_name">智能家居</string>
    <string name="tstinfo">SmartHome ver 0.1</string>
    <string name="Desc_img_ledctrl">灯控图标</string>
    <string name="Desc_img_curtainctrl">窗帘控制</string>
    <string name="Desc_img_moviectrl">影院控制</string>
    <string name="Desc_img_musicctrl">背景音乐控制</string>
    <string name="Desc_img_speechctrl">对讲控制</string>
    <string name="Desc_img_cameractrl">视频监控</string>
    <string name="Desc_img_warmctrl">地暖控制</string>
    <string name="Desc_img_aircondnctrl">空调控制</string>
    <string name="Desc_img_doorctrl">门禁控制</string>
    <string name="Desc_img_safectrl">安防</string>
    <string name="multicamera_activity">多摄像头监控</string>
    <string name="onecamera_activity">单摄像头</string>

    <string name="ListMenu_led_allon">灯光全开</string>
    <string name="ListMenu_led_alloff">灯光全关</string>    
    <string name="ListMenu_led_1on">点控开灯</string>
    <string name="ListMenu_led_1off">点控关灯</string>    
    <string name="ListMenu_led_adj">调光设置</string>    
    
    
</resources>